# OkrutnaGraKarciana

./: .gitignore  README.md
client/: CMakeLists.txt  connection.cpp  connection.h  connection.hpp  game.cpp  game.hpp  handler.cpp  handler.hpp  main.cpp
server/: CMakeLists.txt  cardImport.cpp  cardImport.hpp  client.cpp  client.hpp  connection.cpp  connection.hpp  game.cpp  game.hpp  handler.cpp  handler.hpp  main.cpp  settings.conf  timer.cpp  timer.hpp
server/decks/: set_example1.json  set_example2.json  set_example3.json
testPoco/: app.vue  index.html  myApp  poco.cpp
